Overwrite crun on Ubuntu 22.04

--- a/.github/workflows/ci-ci.yml
+++ b/.github/workflows/ci-ci.yml
@@ -112,6 +112,18 @@ jobs:
       filename: local-ci-0.1.0.tar.gz
       targeted_branch: ${{ needs.selectbranch.outputs.ref }}
 
+  fixcrun:
+    runs-on: ubuntu-22.04
+    steps:
+      - name: Checkout workflows
+        uses: actions/checkout@v4
+      - name: Install crun
+        uses: ./.github/actions/fixcrun
+        with:
+          checksums: CHECKSUMS
+      - name: Verify version of crun
+        run: crun --version|grep 1.14.4
+
   molecule:
     needs:
       - selectbranch
@@ -163,4 +175,5 @@ jobs:
       - molecule
       - molecule_multiple_scenarios
       - scenariocount
+      - fixcrun
 ...
