overwrite crun in reusable-molecule.yml

--- a/.github/workflows/reusable-molecule.yml
+++ b/.github/workflows/reusable-molecule.yml
@@ -70,6 +70,11 @@ jobs:
           path: workflows
           ref: ${{ inputs.targeted_branch }}
 
+      - name: Install crun
+        uses: ./workflows/.github/actions/fixcrun
+        with:
+          checksums: ./workflows/CHECKSUMS
+
       - name: Install Ansible
         uses: ./workflows/.github/actions/installansible
         with:
