--- a/.github/workflows/ci-ci.yml
+++ b/.github/workflows/ci-ci.yml
@@ -58,6 +58,31 @@ jobs:
           test "$collection_name" = "ansible"
           test "$namespace" = "mafalb"
 
+  crun:
+    runs-on: ubuntu-22.04
+    steps:
+      - name: Build Container Image
+        run: |
+          cat - >Containerfile <<EOF
+          FROM ubuntu:22.04
+          RUN apt-get update && apt-get install -y systemd
+          CMD ["/lib/systemd/systemd"]
+          EOF
+          podman build --tag ghtest .
+      - name: Run Container fails
+        run: |
+          ! podman run --systemd always -d ghtest
+      - name: Checkout workflows
+        uses: actions/checkout@v4
+      - name: Install crun
+        uses: ./.github/actions/fixcrun
+        with:
+          checksums: CHECKSUMS
+      - name: Verify version of crun
+        run: crun --version|grep 1.14.4
+      - name: Run Container
+        run: podman run --systemd always -d ghtest
+
   createansiblecollection:
     runs-on: ubuntu-22.04
     needs: selectbranch
@@ -103,7 +128,6 @@ jobs:
           if-no-files-found: error
           overwrite: true
 
-
   ansiblecollection:
     needs:
       - selectbranch
@@ -112,31 +136,6 @@ jobs:
     with:
       filename: local-ci-0.1.0.tar.gz
       targeted_branch: ${{ needs.selectbranch.outputs.ref }}
-
-  crun:
-    runs-on: ubuntu-22.04
-    steps:
-      - name: Build Container Image
-        run: |
-          cat - >Containerfile <<EOF
-          FROM ubuntu:22.04
-          RUN apt-get update && apt-get install -y systemd
-          CMD ["/lib/systemd/systemd"]
-          EOF
-          podman build --tag ghtest .
-      - name: Run Container fails
-        run: |
-          ! podman run --systemd always -d ghtest
-      - name: Checkout workflows
-        uses: actions/checkout@v4
-      - name: Install crun
-        uses: ./.github/actions/fixcrun
-        with:
-          checksums: CHECKSUMS
-      - name: Verify version of crun
-        run: crun --version|grep 1.14.4
-      - name: Run Container
-        run: podman run --systemd always -d ghtest
 
   molecule:
     needs:
@@ -149,6 +148,7 @@ jobs:
       filename: local-ci-0.1.0.tar.gz
       hostname: ci-system
       target: ubuntu22
+      scenario: default
 
   molecule_multiple_scenarios:
     needs:
@@ -163,13 +163,24 @@ jobs:
       target: ubuntu22
       scenarios: "default, default"  # cheating!
 
+  scenariocount:
+    needs: molecule_multiple_scenarios
+    runs-on: ubuntu-latest
+    env:
+      LOOPCOUNT: ${{ needs.molecule_multiple_scenarios.outputs.scenariocount }}
+    steps:
+      - name: Has looped two times
+        run:
+          # We tested two scenarios in the job before
+          test "$LOOPCOUNT" = 2
+
   # A Collection to test systemd container with old cgroups v1 (centos7)
   #
   createansiblecollection2:
     runs-on: ubuntu-22.04
     needs:
       - selectbranch
-      - createansiblecollection
+      - scenariocount
 
     steps:
 
@@ -265,20 +276,10 @@ jobs:
     with:
       name: Molecule cgroupv1
       target: centos7
+      scenario: default
       hostname: ci-centos7
       filename: local-ci2-0.1.0.tar.gz
       targeted_branch: ${{ needs.selectbranch.outputs.ref }}
-
-  scenariocount:
-    needs: molecule_multiple_scenarios
-    runs-on: ubuntu-latest
-    env:
-      LOOPCOUNT: ${{ needs.molecule_multiple_scenarios.outputs.scenariocount }}
-    steps:
-      - name: Has looped two times
-        run:
-          # We tested two scenarios in the job before
-          test "$LOOPCOUNT" = 2
 
   allsuccess:
     if: success() || failure()
