--- a/.github/workflows/ci-ci.yml
+++ b/.github/workflows/ci-ci.yml
@@ -221,6 +221,8 @@ jobs:
                 ansible.builtin.command: systemctl status systemd-tmpfiles-setup.service
                 when: ansible_service_mgr == 'systemd'
                 changed_when: false
+              - name: Get systemd status
+                ansible.builtin.command: systemctl is-system-running
           EOF
 
           cat - >local/ci2/molecule/Dockerfile-rhel7.j2 << EOF
